src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name For Portal</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_NTV_Was_Sent__c</fullName>
        <label>Date NTV was sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Document_Link__c</fullName>
        <formula>IF(Subject = &apos;Send Credit Card Authorization (CCA)&apos;, HYPERLINK(&apos;/apex/CCAuthFormPreviewPage?reqId=&apos;&amp; WhatId &amp; &apos;&amp;taskId=&apos;&amp; Id, &apos;CC Auth Form&apos;), IF(Subject = &apos;Send Temporary Housing Agreement(THA)&apos;, HYPERLINK(&apos;/apex/THADocumentLanguagePage?whatId=&apos;&amp; WhatId &amp; &apos;&amp;taskId=&apos;&amp; Id , &apos;THA Document&apos;), IF(Subject = &apos;Send Adjuster Confirmation&apos;, HYPERLINK(&apos;/apex/AdjusterConfFormPreviewPage?reqId=&apos;&amp; WhatId &amp; &apos;&amp;taskId=&apos;&amp; Id, &apos;Adjuster Form&apos;), IF(CONTAINS(Subject, &apos;Send NTV&apos;), HYPERLINK(&apos;/apex/NTVDocumentPreviewPage?reqId=&apos;&amp; WhatId &amp; &apos;&amp;taskId=&apos;&amp; Id, &apos;NTV Document&apos;), &apos;&apos;) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Time__c</fullName>
        <label>Due Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fax_Completion_Time__c</fullName>
        <label>Fax Completion Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fax_Result_ID__c</fullName>
        <description>This field stores reference id of fax document which sent using Interfax</description>
        <label>Fax Result ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax_Sent_User_ID__c</fullName>
        <description>Field used to know which user sent fax</description>
        <label>Fax Sent User ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax_Status__c</fullName>
        <label>Fax Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fax_Submit_Time__c</fullName>
        <label>Fax Submit Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>InterFAX_URL__c</fullName>
        <formula>IF(Subject = &apos;Send Credit Card Authorization (CCA)&apos; || Subject = &apos;Send Temporary Housing Agreement(THA)&apos; || Subject = &apos;Send Adjuster Confirmation&apos;, HYPERLINK(&apos;https://secure.interfax.net/Default.aspx?lang=EN&apos;, &quot;Login Link&quot;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InterFAX URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NTV_Sent_Receipt__c</fullName>
        <label>NTV Sent Receipt</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Originating_Party__c</fullName>
        <label>Originating Party</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adjuster</fullName>
                </value>
                <value>
                    <fullName>Policyholder</fullName>
                </value>
                <value>
                    <fullName>CRS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <formula>Owner:User.UserRole.Name</formula>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Placement</label>
        <referenceTo>Placement__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publish_On_Adjuster_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish on Adjuster Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publish_On_Policyholder_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish on Policyholder Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SALESLOGIX_ACTIVITY_ID__c</fullName>
        <label>SALESLOGIX ACTIVITY ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesLogix_Activity_Record_Owner__c</fullName>
        <label>SalesLogix Activity Record Owner</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selected_Search__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selected Search</label>
        <referenceTo>Searches__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sent_File_Link_URL__c</fullName>
        <label>Sent File Link URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sent_File_Link__c</fullName>
        <formula>HYPERLINK(Sent_File_Link_URL__c,&apos;View File&apos;)</formula>
        <label>Sent File Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Request</label>
        <referenceTo>ServiceRequest__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_Follow_Up_Status__c</fullName>
        <label>Task Follow Up Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attempt -1</fullName>
                </value>
                <value>
                    <fullName>Attempt -2</fullName>
                </value>
                <value>
                    <fullName>Attempt -3</fullName>
                </value>
                <value>
                    <fullName>Hotel Options</fullName>
                </value>
                <value>
                    <fullName>Book Hotel</fullName>
                </value>
                <value>
                    <fullName>Send Documents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Message_Received__c</fullName>
        <description>Note the time the message was received for the Allstate contract.</description>
        <label>Time Message Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Message_Returned__c</fullName>
        <description>Note the time the message was returned per the Allstate contract.</description>
        <label>Time Message Returned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_To_Complete__c</fullName>
        <formula>(Completed_Date__c - CreatedDate) * 1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time To Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All_Open</fullName>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>Placement__c</columns>
        <columns>Due_Time__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>All Open</label>
    </listViews>
    <listViews>
        <fullName>Brian_s_task_view</fullName>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>Placement__c</columns>
        <columns>Due_Time__c</columns>
        <columns>TASK.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER_ROLE</field>
            <operation>equals</operation>
            <value>Customer Care Specialist,Relationship Manager</value>
        </filters>
        <label>Brian&apos;s task view</label>
        <sharedTo>
            <group>Fulgurite_Report_Visibility</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Next_7_Days</fullName>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>Placement__c</columns>
        <columns>Due_Time__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:7</value>
        </filters>
        <label>Next 7 Days</label>
    </listViews>
    <listViews>
        <fullName>Next_7_Days_Overdue</fullName>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>Placement__c</columns>
        <columns>Due_Time__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessOrEqual</operation>
            <value>NEXT_N_DAYS:7</value>
        </filters>
        <label>Next 7 Days + Overdue</label>
    </listViews>
    <listViews>
        <fullName>Overdue</fullName>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>Placement__c</columns>
        <columns>Due_Time__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Overdue</label>
    </listViews>
    <listViews>
        <fullName>This_Month</fullName>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>Placement__c</columns>
        <columns>Due_Time__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>This Month</label>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>Placement__c</columns>
        <columns>Due_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Due_Time__c</field>
            <operation>equals</operation>
        </filters>
        <label>Today</label>
    </listViews>
    <listViews>
        <fullName>Today_Overdue</fullName>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>Placement__c</columns>
        <columns>Due_Time__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Today + Overdue</label>
    </listViews>
    <listViews>
        <fullName>Tomorrow</fullName>
        <columns>TASK.TYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>Placement__c</columns>
        <columns>Due_Time__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Tomorrow</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>